--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
 		"dev": "next dev --turbopack",
 		"build": "next build",
 		"start": "next start",
-		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
+		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix",
+		"deploy": "next build && next export && touch out/.nojekyll",
+		"predeploy": "npm run build",
+		"export": "next export"
 	},
 	"dependencies": {
 		"@heroui/button": "2.2.9",
@@ -61,5 +64,6 @@
 		"tailwind-variants": "0.1.20",
 		"tailwindcss": "3.4.16",
 		"typescript": "5.6.3"
-	}
+	},
+	"homepage": "https://henry-oway.github.io/onboarding-step-colors-template"
 }
