--- a/.prettierrc
+++ b/.prettierrc
@@ -1,1 +1,8 @@
- 
+{
+  "semi": false,
+  "singleQuote": true,
+  "tabWidth": 2,
+  "useTabs": false,
+  "trailingComma": "none",
+  "printWidth": 100
+} 
