--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,16 +25,15 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Debug - List build output
-        run: |
-          echo "Contents of ./out directory:"
-          ls -la ./out
+      - name: Add .nojekyll file
+        run: touch ./out/.nojekyll
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./out
+          enable_jekyll: false
 
       - name: Debug - Print deployment info
         run: |
