--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev --turbopack",
-		"build": "next build --no-lint",
+		"build": "next build && touch out/.nojekyll",
 		"start": "next start",
 		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
 	},
@@ -61,6 +61,5 @@
 		"tailwind-variants": "0.1.20",
 		"tailwindcss": "3.4.16",
 		"typescript": "5.6.3"
-	},
-	"homepage": "https://henry-oway.github.io/onboarding-step-colors-template"
+	}
 }
