--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
 	"scripts": {
 		"dev": "next dev --turbopack",
 		"build": "next build && touch out/.nojekyll",
-		"start": "next start",
-		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
+		"start": "next start"
 	},
 	"dependencies": {
 		"@heroui/button": "2.2.9",
