--- a/package.json
+++ b/package.json
@@ -1,51 +1,30 @@
 {
-	"name": "next-app-template",
+	"name": "onboarding-step-colors",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "next dev --turbopack",
-		"build": "next build && touch out/.nojekyll",
-		"start": "next start",
-		"serve": "npx serve out"
+		"dev": "vite",
+		"build": "vite build",
+		"serve": "vite preview"
 	},
 	"dependencies": {
 		"@heroui/button": "2.2.9",
-		"@heroui/code": "2.2.6",
 		"@heroui/input": "2.4.9",
-		"@heroui/kbd": "2.2.6",
-		"@heroui/link": "2.2.7",
-		"@heroui/listbox": "2.3.9",
-		"@heroui/navbar": "2.2.8",
-		"@heroui/snippet": "2.2.10",
-		"@heroui/switch": "2.2.8",
 		"@heroui/system": "2.4.6",
 		"@heroui/theme": "2.4.5",
-		"@heroui/tooltip": "2.2.8",
 		"@iconify/react": "^4.1.1",
-		"@nextui-org/react": "^2.0.0",
-		"@react-aria/ssr": "3.9.7",
-		"@react-aria/visually-hidden": "3.8.18",
-		"@types/react": "^18.2.0",
-		"@types/react-dom": "^18.2.0",
 		"@uiw/react-color": "^2.4.0",
-		"clsx": "2.1.1",
-		"framer-motion": "11.13.1",
-		"intl-messageformat": "^10.5.0",
-		"next": "15.0.4",
-		"next-themes": "^0.4.4",
 		"react": "18.3.1",
-		"react-dom": "18.3.1",
-		"react-phone-number-input": "^3.3.7"
+		"react-dom": "18.3.1"
 	},
 	"devDependencies": {
-		"@react-types/shared": "3.25.0",
-		"@types/node": "20.5.7",
-		"@types/react": "18.3.3",
-		"@types/react-dom": "18.3.0",
+		"@types/react": "^18.2.0",
+		"@types/react-dom": "^18.2.0",
+		"@vitejs/plugin-react": "^4.2.1",
 		"autoprefixer": "10.4.19",
 		"postcss": "8.4.49",
-		"tailwind-variants": "0.1.20",
 		"tailwindcss": "3.4.16",
-		"typescript": "5.6.3"
+		"typescript": "5.6.3",
+		"vite": "^5.1.4"
 	}
 }
